--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,7 @@ jobs:
       - deploy:
           name: Push application Docker image
           command: |
+             cd app
              if [ "${CIRCLE_BRANCH}" == "master" ]; then
                 VERSION=${VERSION_PREFIX}.${CIRCLE_BUILD_NUM}
                 docker build -t ${DOCKER_ACCOUNT}/${PROJECT_NAME} .
@@ -51,11 +52,12 @@ workflows:
   build_and_deploy:
     jobs:
       - build
-      - hold:
-         type: approval
-         requires:
-           - build
+#      - hold:
+#         type: approval
+#         requires:
+#           - build
       - deploy:
           context: org-global
           requires:
-            - hold 
+            - build
+ #           - hold 
