--- a/IpInfo.Api/appSettings.Development.json
+++ b/IpInfo.Api/appSettings.Development.json
@@ -1,6 +1,7 @@
 ﻿{
-  "IpInfoService": {
-    "Url": "http://ipinfo.io",
-    "TimeoutInSeconds": "30"
-  }
+  "IPINFO_SERVICE_URL": "http://ipinfo.io",
+  "IPINFO_SERVICE_TIMEOUT_IN_SECONDS": 30,
+
+  "ROLLBAR_ACCESSTOKEN": "xxxxxxxxxxxxxxxxxxxxxx",
+  "ROLLBAR_ENVIRONMENT": "development"
 }
